--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 Sanity was brought to you by:
 
 Igor Nascimento dos Santos <igorn428@gmail.com>
+Artur Santos Nascimento <eartursempre@hotmail.com>
