Adding new features

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,3 +9,6 @@ Tue Jun 16 10:13:25 BRT 2015
 -add samples DIR
 -add AUTHOR in AUTHORS file
 
+Tue Jun 16 15:00:22 BRT 2015
+- Create the libreoffice.sh file
+- Adding a new collaborator (Artur)
