Fix office and main

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,3 +18,4 @@ Qui Jun 18 10:47:13 BRT 2015
 
 Thu Jun 18 11:11:08 BRT 2015
 - Office bug fixies in error log
+- main.sh bug fixies em reference to office.sh
