New Alpha release

--- a/ChangeLog
+++ b/ChangeLog
@@ -49,4 +49,7 @@ Seg Jul 27 20:38:52 BRT 2015
 - Adding new resources
 - Adding the .desktop file
 
+Qui Jul 30 14:41:34 BRT 2015
+- Adding Sanity in Prodap's Repo
+- The Alpha release is out
 
