Creating GUI menu

--- a/ChangeLog
+++ b/ChangeLog
@@ -67,3 +67,7 @@ Qui Ago 13 11:40:48 BRT 2015
 Seg Ago 24 21:45:13 BRT 2015
 - Creating an installer for Sanity's window
 
+Ter Nov 10 17:46:42 BRST 2015
+- Creating a new menu for TCL/TK application (GUI)
+- Improving net test
+- Creating a new about section
