Improving all tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -71,3 +71,6 @@ Ter Nov 10 17:46:42 BRST 2015
 - Creating a new menu for TCL/TK application (GUI)
 - Improving net test
 - Creating a new about section
+
+Seg Nov 16 09:20:39  2015
+- Improving all tests
