--- a/ChangeLog
+++ b/ChangeLog
@@ -77,3 +77,7 @@ Seg Nov 16 09:20:39  2015
 
 Seg Nov 16 21:17:30  2015
 - Modifying GUI
+
+Sex Dez 11 16:10:51 BRST 2015
+- Resolving icon view problem
+- Resolving progressbar problem
